# rgbd_calibration

./: CMakeLists.txt  Gemfile  README.md  _config.yml  index.html  index.md  package.xml  params.json
_includes/: image.html
_layouts/: default.html
conf/: checkerboards.yaml  checkerboards_pepper.yaml  sim_camera.yaml
download/: arxiv2017.bib  icra2014.bib  thesis.bib
include/rgbd_calibration/: calibration.h  calibration_node.h  calibration_test.h  checkerboard_views.h  checkerboard_views_extractor.h  depth_undistortion_estimation.h  globals.h  offline_calibration_node.h  plane_based_extrinsic_calibration.h  publisher.h  simulation_node.h  test_node.h
launch/: kinect1_train_calibration.launch  kinect2_507_tro.launch  kinect2_507_tro_test.launch  kinect_47A_tro.launch  kinect_47A_tro_test.launch  kinect_data_collection.launch  kinect_offline_calibration.launch  kinect_test_calibration.launch  pepper_tro.launch
msg/: Acquisition.msg
src/rgbd_calibration/: calibration.cpp  calibration_node.cpp  calibration_test.cpp  checkerboard_views.cpp  checkerboard_views_extractor.cpp  data_collection_node.cpp  depth_undistortion_estimation.cpp  offline_calibration_node.cpp  publisher.cpp  simulation_node.cpp  test_node.cpp
test/: polynomial_undistortion_matrix_multifit_test.cpp
